fix(Modal): fixed issue with position of Modal on mobile devices

--- a/src/components/containers/Modal/modal.scss
+++ b/src/components/containers/Modal/modal.scss
@@ -8,7 +8,7 @@
 .alt-modal-wrapper {
   position: fixed;
   width: 100vw;
-  min-height: 100vh;
+  min-height: 100dvh;
   height: 100%;
   top: 0;
   left: 0;
